--- a/style.css
+++ b/style.css
@@ -1,51 +1,51 @@
 body {
-    background-image: linear-gradient(90deg, #C0C0C0, #4F4F4F);
-    text-align: center;
+	background-image: linear-gradient(90deg, #c0c0c0, #4f4f4f);
+	text-align: center;
 }
 
 .box {
-    background-color: rgba(0, 0, 0, 0.6);
-    position: absolute;
-    top: 50%;
-    /* centralizar na página */
-    left: 50%;
-    /* centralizar na página */
-    transform: translate(-50%, -50%);
-    /* centralizar na página o meio da div */
-    padding: 15px;
-    /* border-radius: 15px; */
-    color: white;
+	background-color: rgba(0, 0, 0, 0.6);
+	position: absolute;
+	top: 50%;
+	/* centralizar na página */
+	left: 50%;
+	/* centralizar na página */
+	transform: translate(-50%, -50%);
+	/* centralizar na página o meio da div */
+	padding: 15px;
+	/* border-radius: 15px; */
+	color: white;
 }
 
 input {
-    text-align: center;
-    padding: 10px;
-    border: none;
-    outline: none;
-    /* retirar bordas ao clicar */
-    /* border-radius: 10px; */
-    font-size: 15px;
-    width: 55%;
+	text-align: center;
+	padding: 10px;
+	border: none;
+	outline: none;
+	/* retirar bordas ao clicar */
+	/* border-radius: 10px; */
+	font-size: 15px;
+	width: 55%;
 }
 
 button {
-    background-color: slateblue;
-    margin-top: 10px;
-    padding: 10px;
-    border: none;
-    outline: none;
-    width: 60%;
-    color: white;
-    /* border-radius: 10px; */
-    cursor: pointer;
-    transition: 0.5s;
-    /* mudança da cor do botão suavemente */
+	background-color: slateblue;
+	margin-top: 10px;
+	padding: 10px;
+	border: none;
+	outline: none;
+	width: 60%;
+	color: white;
+	/* border-radius: 10px; */
+	cursor: pointer;
+	transition: 0.5s;
+	/* mudança da cor do botão suavemente */
 }
 
 button:hover {
-    background-color: cornflowerblue;
+	background-color: cornflowerblue;
 }
 
 button#op {
-    margin-bottom: 5px;
-}   
+	margin-bottom: 5px;
+}
